--- a/WebChat/WebChat/Views/ChatRooms/Edit.cshtml
+++ b/WebChat/WebChat/Views/ChatRooms/Edit.cshtml
@@ -16,6 +16,13 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ChatRoomId)
+        <div class="form-group">
+            @Html.LabelFor(model => model.ChatRoomName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ChatRoomName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ChatRoomName, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
