Clean up, unneeded view

--- a/WebChat/WebChat/Views/Home/Index.cshtml
+++ b/WebChat/WebChat/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Chat";
 }
-
+<h2>te</h2>
 <div class="row">
     <div class="col-md-8" id="Chat">
     </div>
@@ -12,6 +12,7 @@
 @section Scripts {
     @Scripts.Render("~/Scripts/React/ChatRoom.jsx")
     @Scripts.Render("~/Scripts/React/ChatMessage.jsx")
+    @Scripts.Render("~/Scripts/React/ChatMessageInput.jsx")
     @Scripts.Render("~/Scripts/React/Users.jsx")
     @Scripts.Render("~/Scripts/React/Index.jsx")
 }
